招投标信息文件支付多文件
